--- a/src/index.css
+++ b/src/index.css
@@ -24,13 +24,13 @@ body {
   overflow: hidden;
 }
 
-.navbar {
+.toDoNavBar {
   padding: 40px 20px;
   text-align: center;
   background: #62787c;
 }
 
-.navbar h1 {
+.toDoNavBar h1 {
   margin-bottom: 10px;
 }
 
